Adopt styling that both improves Kiali standalone and alignes better with Openshift Console, a target for kiosk-style plugins. - adopt PF Badge styling that is consistent with OpenShift. It is an   improvement over current badging as the badge text is more legible and   the badge itself is more lean.  Also, it introduces color classification   in addition to text. - change graph box label background from "dark" to "light" theme, as   our whole UI is light theme.  This plays better with the light-themed   console badge backgrounds.  The new background is also chosen to work   with the grayscale graph theming. - assign a non-default color to the cluster badge. - introduce PFBadge 'size' property.  Can now set size="sm" where applicable   - now using "sm" for     - graph side-panel     - graph context menu     - workload detail pod card - removed dead _overrides CSS (leftover from pf update) - Use 14px more consistently for cleaner UX   - change graph side panel from 12px to 14px   - change list views from 16px to 14px, and reduce padding   - define --kiali-global--font-size in _overrides.scss     - have it match $font-size-base (14px) in index.scss (to match console).     - override PF to use it in several places, for consistency in kiali     - use the variable in kiali code, as opposed to explicit settings     - ensure exception cases are set explictly to nn-14px values - fix a regression in label filtering in list views   - introduced by me, I think in 1.51 - fix l+f issues in label rendering in the list views   - remove homegrown stuff in list view with our <Label> component   - enhance <Label> to handle list view needs

--- a/frontend/src/pages/Graph/_Graph.scss
+++ b/frontend/src/pages/Graph/_Graph.scss
@@ -1,7 +1,7 @@
 :root {
   --graph-find-input--width: 15em;
-  --graph-side-panel--font-size: 12px;
-  --graph-side-panel--font-size-px: 12;
+  --graph-side-panel--font-size: var(--kiali-global--font-size);
+  --graph-side-panel--font-size-px: var(--kiali-global--font-size-px);
 }
 
 #summary-appbox-actions .pf-c-dropdown__toggle {
